# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api/v1
 definitions:
+  common.AppError:
+    properties:
+      code:
+        type: string
+      details:
+        type: string
+      message:
+        type: string
+      status:
+        type: integer
+    type: object
   enums.ItemType:
     enum:
     - 0
@@ -33,6 +44,23 @@ definitions:
         type: integer
     type: object
   models.Item:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: integer
+      image:
+        $ref: '#/definitions/models.Image'
+      name:
+        type: string
+      status:
+        type: integer
+      type:
+        $ref: '#/definitions/enums.ItemType'
+      updated_at:
+        type: string
     type: object
   models.ItemCreate:
     properties:
@@ -44,9 +72,11 @@ definitions:
         type: integer
       type:
         $ref: '#/definitions/enums.ItemType'
-    required:
-    - name
-    - type
+    type: object
+  models.ItemIdRead:
+    properties:
+      id:
+        type: integer
     type: object
   models.ItemUpdate:
     properties:
@@ -139,15 +169,15 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/models.ItemIdRead'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
       summary: Create a new item
       tags:
       - Items
@@ -198,15 +228,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/models.Item'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.AppError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
       summary: Retrieve an item by ID
       tags:
       - Items
@@ -270,19 +304,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/models.Item'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.APIResponse'
+            $ref: '#/definitions/common.AppError'
       summary: Update an item by ID
       tags:
       - Items
